kubernetes/namespaces/monitoring/grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - image: grafana/grafana:12.4.1-ubuntu
          imagePullPolicy: IfNotPresent
          name: grafana
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-storage
            - mountPath: /etc/dashboards
              name: grafana-dashboards
            - mountPath: /etc/provisioning/dashboards
              name: grafana-provisioning
            - mountPath: /etc/provisioning/datasources
              name: grafana-provisioning
          # https://grafana.com/docs/grafana/latest/setup-grafana/installation/kubernetes/
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-storage
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-provisioning
          configMap:
            name: grafana-provisioning
        - name: grafana-dashboards
          configMap:
            name: grafana-dashboards
