kubernetes/namespaces/monitoring/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: http
    name: http
